# OmniLSS

./: .Rprofile  .gitignore  CHANGELOG.md  CHANGELOG_cn.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_cn.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  README.md  README_cn.md  bump_version.ps1  codecov.yml  docker-compose.yml  mkdocs.yml  publish.ps1
docs/: index.md  (+3 more)
omnilss/: .gitignore  README.md  pyproject.toml  run_r_tests.ps1  run_tests.ps1  run_tests.sh
omnilss-pro/: Dockerfile  pyproject.toml
omnilss-pro/src/omnilss_pro/: __init__.py  automl.py  client.py
omnilss-pro/tests/: test_automl.py  test_integration.py
omnilss/src/omnilss/: DevianceIncr.py  DropAddStepGAIC_Parallel.py  HistDist_03_10_13.py  LR_test_12_06_2013.py  MODEL_comparison.py  Rsq.py  SUMMARY.py  VuongClarkTest.py  __init__.py  _fitting_init.py  _fitting_residuals.py  _fitting_utils.py  acfResid.py  ad.py  ad_validation.py  bessel.py  bootstrap.py  calibration_runtime.py  centile_pred_30_06_22.py  centilesFan.py  centilesPLOT.py  centilescom.py  cg_derivatives.py  chooseDistParallel.py  config.py  confint_gamlss_29_06_22.py  controls.py  design_schema.py  diagnostic_warnings.py  diagnostics.py  distribution_registry.py  distributions.py  distributions_b1.py  distributions_b10_zero_variants.py  distributions_b11.py  distributions_b12.py  distributions_b13.py  distributions_b14.py  distributions_b15.py  distributions_b16.py  (+72 more)
omnilss/src/omnilss/algorithms/: __init__.py  _model_metrics.py  cg_algorithm.py  cg_algorithm_full.py  cg_algorithm_v2.py  jax_family_specs.py  jax_rs_batch.py  jax_rs_core.py  jax_rs_integration.py  lbfgs_algorithm.py  mixed_algorithm.py  rs_algorithm.py  stabilized_hessian.py
omnilss/src/omnilss/api/: __init__.py
omnilss/src/omnilss/automl/: __init__.py
omnilss/src/omnilss/benchmarks/: __init__.py  dataset_registry.py  report.py  runner.py
omnilss/src/omnilss/core/: __init__.py  device.py  family_factory.py  gamlss_integration.py  laplace.py  lbfgs_optimizer.py  mixture.py  optimizer.py  parameter_spec.py
omnilss/src/omnilss/deep/: __init__.py  deep_gamlss.py
omnilss/src/omnilss/derivatives/: __init__.py  cross_derivatives.py
omnilss/tests/: README.md  README_cn.md  __init__.py  _r_bridge_helper.py  run_suite.py  suites.py  test_ad_validation.py  test_algorithm_model_metrics.py  test_basic_batch10.py  test_basic_batch11.py  test_basic_batch12.py  test_basic_batch14.py  test_basic_batch1_remaining.py  test_basic_batch3.py  test_basic_batch3_simple.py  test_basic_batch4.py  test_basic_batch5.py  test_basic_batch6_8.py  test_basic_batch9.py  test_bb_dpqr.py  test_bccg_dpqr.py  test_bcpe_dpqr.py  test_bct_dpqr.py  test_beinf_dpqr.py  test_bootstrap.py  test_bsplines.py  test_bug_condition_complex_distributions.py  test_calibration_runtime.py  test_cg_algorithm.py  test_cg_algorithm_full.py  test_cg_algorithm_full_r_alignment.py  test_cg_algorithm_full_validation.py  test_cg_algorithm_v2.py  test_cg_compat_wrapper.py  test_cg_cross_derivatives.py  test_cg_v2_r_consistency.py  test_config_auto_method.py  test_consistency_families.py  test_cooks_distance.py  test_core_architecture_contracts.py  (+162 more)
omnilss/tests/consistency/: test_gradient_no_finite_difference.py  test_stability_extreme_inputs.py
omnilss/tests/rbus/: __init__.py  core.py  install_packages.R  r_bridge.py
omnilss/tools/: check_docs_localization.py  generate_capability_matrix.py  generate_grpc_stubs.py  release_check.py  release_gate_smoke.py  validate_capability_matrix.py  validate_model_artifact.py
(+496 files in other folders)
